🔧 Add home item list
